// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="m-stop-page__header"
>
  <div
    className="m-stop-page__header-container"
  >
    <h1
      className="m-stop-page__name m-stop-page__name--upcase"
    >
      South Station
    </h1>
    <div
      className="m-stop-page__header-features"
    >
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Red Line"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Silver Line"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Commuter Rail"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon c-icon__cr-zone"
        >
          Zone 1A
        </span>
      </a>
      <a
        className="m-stop-page__access-icon"
        href="#header-accessibility"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-accessible-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Accessible"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#header-parking"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-parking-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Parking"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
    </div>
    <div
      className="header-tabs"
    >
      <div
        className="
      header-tab
      header-tab--dark
      header-tab--selected
      
      info
    "
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Station Info
      </div>
      <div
        className="
      header-tab
      header-tab--dark
      
      header-tab--alert
      alerts
    "
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Alerts
        <div
          aria-label="1 alert"
          className="m-alert-badge"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a ferry route 1`] = `
<div
  className="m-stop-page__header"
>
  <div
    className="m-stop-page__header-container"
  >
    <h1
      className="m-stop-page__name m-stop-page__name--upcase"
    >
      South Station
    </h1>
    <div
      className="m-stop-page__header-features"
    >
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Ferry"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon c-icon__cr-zone"
        >
          Zone 1A
        </span>
      </a>
      <a
        className="m-stop-page__access-icon"
        href="#header-accessibility"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-accessible-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Accessible"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#header-parking"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-parking-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Parking"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
    </div>
    <div
      className="header-tabs"
    >
      <div
        className="
      header-tab
      header-tab--dark
      header-tab--selected
      
      info
    "
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Station Info
      </div>
      <div
        className="
      header-tab
      header-tab--dark
      
      header-tab--alert
      alerts
    "
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Alerts
        <div
          aria-label="1 alert"
          className="m-alert-badge"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders all subway routes 1`] = `
<div
  className="m-stop-page__header"
>
  <div
    className="m-stop-page__header-container"
  >
    <h1
      className="m-stop-page__name m-stop-page__name--upcase"
    >
      South Station
    </h1>
    <div
      className="m-stop-page__header-features"
    >
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Red Line"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Orange Line"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Blue Line"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Mattapan Trolley"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon c-icon__cr-zone"
        >
          Zone 1A
        </span>
      </a>
      <a
        className="m-stop-page__access-icon"
        href="#header-accessibility"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-accessible-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Accessible"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#header-parking"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-parking-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Parking"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
    </div>
    <div
      className="header-tabs"
    >
      <div
        className="
      header-tab
      header-tab--dark
      header-tab--selected
      
      info
    "
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Station Info
      </div>
      <div
        className="
      header-tab
      header-tab--dark
      
      header-tab--alert
      alerts
    "
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Alerts
        <div
          aria-label="1 alert"
          className="m-alert-badge"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with green line routes 1`] = `
<div
  className="m-stop-page__header"
>
  <div
    className="m-stop-page__header-container"
  >
    <h1
      className="m-stop-page__name m-stop-page__name--upcase"
    >
      South Station
    </h1>
    <div
      className="m-stop-page__header-features"
    >
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Green Line"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Green Line B"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Green Line C"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Green Line D"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Green Line E"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#route-card-list"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon c-icon__cr-zone"
        >
          Zone 1A
        </span>
      </a>
      <a
        className="m-stop-page__access-icon"
        href="#header-accessibility"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-accessible-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Accessible"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
      <a
        className="m-stop-page__header-feature"
        href="#header-parking"
        onClick={[Function]}
      >
        <span
          className="m-stop-page__icon"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon-parking-default"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
            data-original-title="Parking"
            data-toggle="tooltip"
            title=""
          />
        </span>
      </a>
    </div>
    <div
      className="header-tabs"
    >
      <div
        className="
      header-tab
      header-tab--dark
      header-tab--selected
      
      info
    "
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Station Info
      </div>
      <div
        className="
      header-tab
      header-tab--dark
      
      header-tab--alert
      alerts
    "
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Alerts
        <div
          aria-label="1 alert"
          className="m-alert-badge"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;
